--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="rauls profile picture.jpeg" alt="Rauls profile picture"></td>
+      <td><img src="Rauls profile picture.jpeg" alt="Rauls profile picture"></td>
       <td><h1>Rauls Avenitis</h1>
       <p><em>Self-thought <strong>Web Developer</strong></em></p>
       <p>I have learned HTML, CSS and JavaScript</p></td>
